# voidchat

./: .gitignore  Cargo.toml
crates/voidchat_client/: Cargo.toml
crates/voidchat_proto/: Cargo.toml
crates/voidchat_proto/src/: lib.rs  stream.rs
crates/voidchat_server/: Cargo.toml
crates/voidchat_server/src/: main.rs
