[package]
name = "voidchat_proto"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
futures-lite = { version = "2.6.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[features]
stream = ["futures-lite"]
