[package]
name = "voidchat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-net = "2.0.0"
async-signal = "0.2.13"
clap = { version = "4.5.50", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
futures-lite = "2.6.1"
smol = "2.0.2"
voidchat_proto = {path = "../voidchat_proto"}
